simpleCGrammar/simpleCGrammarParser.py
# Generated from simpleCGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class simpleCGrammarParser ( Parser ):

    grammarFileName = "simpleCGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'struct'", 
                     "'='", "'void'", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'!'", "'true'", "'false'", "'int'", "'double'", 
                     "'char'", "'bool'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Integer", 
                      "Double", "Char", "String", "Bool", "Identifier", 
                      "ArithmeticOperator", "RelationalOperator", "LogicalOperator", 
                      "AssignmentOperator", "Keyword", "LParen", "RParen", 
                      "LBrace", "RBrace", "LBracket", "RBracket", "Comma", 
                      "Semi", "Colon", "LineComment", "BlockComment", "WS", 
                      "LibraryName" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_structDef = 2
    RULE_structMember = 3
    RULE_mStruct = 4
    RULE_arrayDef = 5
    RULE_varDef = 6
    RULE_funcDef = 7
    RULE_params = 8
    RULE_param = 9
    RULE_funcBody = 10
    RULE_statement = 11
    RULE_exprStatement = 12
    RULE_compoundStatement = 13
    RULE_selectionStatement = 14
    RULE_iterationStatement = 15
    RULE_returnStatement = 16
    RULE_expr = 17
    RULE_primaryExpr = 18
    RULE_mType = 19
    RULE_mArray = 20

    ruleNames =  [ "prog", "include", "structDef", "structMember", "mStruct", 
                   "arrayDef", "varDef", "funcDef", "params", "param", "funcBody", 
                   "statement", "exprStatement", "compoundStatement", "selectionStatement", 
                   "iterationStatement", "returnStatement", "expr", "primaryExpr", 
                   "mType", "mArray" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    Integer=19
    Double=20
    Char=21
    String=22
    Bool=23
    Identifier=24
    ArithmeticOperator=25
    RelationalOperator=26
    LogicalOperator=27
    AssignmentOperator=28
    Keyword=29
    LParen=30
    RParen=31
    LBrace=32
    RBrace=33
    LBracket=34
    RBracket=35
    Comma=36
    Semi=37
    Colon=38
    LineComment=39
    BlockComment=40
    WS=41
    LibraryName=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.IncludeContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.IncludeContext,i)


        def structDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.StructDefContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.StructDefContext,i)


        def arrayDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.ArrayDefContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.ArrayDefContext,i)


        def varDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.VarDefContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.VarDefContext,i)


        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.FuncDefContext,i)


        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = simpleCGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 42
                self.include()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 491600) != 0):
                self.state = 52
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.structDef()
                    pass

                elif la_ == 2:
                    self.state = 49
                    self.arrayDef()
                    pass

                elif la_ == 3:
                    self.state = 50
                    self.varDef()
                    pass

                elif la_ == 4:
                    self.state = 51
                    self.funcDef()
                    pass


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LibraryName(self):
            return self.getToken(simpleCGrammarParser.LibraryName, 0)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = simpleCGrammarParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(simpleCGrammarParser.T__0)
            self.state = 58
            self.match(simpleCGrammarParser.T__1)
            self.state = 59
            self.match(simpleCGrammarParser.LibraryName)
            self.state = 60
            self.match(simpleCGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(simpleCGrammarParser.Identifier, 0)

        def LBrace(self):
            return self.getToken(simpleCGrammarParser.LBrace, 0)

        def RBrace(self):
            return self.getToken(simpleCGrammarParser.RBrace, 0)

        def Semi(self):
            return self.getToken(simpleCGrammarParser.Semi, 0)

        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.StructMemberContext,i)


        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_structDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDef" ):
                listener.enterStructDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDef" ):
                listener.exitStructDef(self)




    def structDef(self):

        localctx = simpleCGrammarParser.StructDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(simpleCGrammarParser.T__3)
            self.state = 63
            self.match(simpleCGrammarParser.Identifier)
            self.state = 64
            self.match(simpleCGrammarParser.LBrace)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.structMember()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                    break

            self.state = 70
            self.match(simpleCGrammarParser.RBrace)
            self.state = 71
            self.match(simpleCGrammarParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Identifier)
            else:
                return self.getToken(simpleCGrammarParser.Identifier, i)

        def Semi(self):
            return self.getToken(simpleCGrammarParser.Semi, 0)

        def mType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.MTypeContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.MTypeContext,i)


        def mArray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.MArrayContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.MArrayContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Comma)
            else:
                return self.getToken(simpleCGrammarParser.Comma, i)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_structMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructMember" ):
                listener.enterStructMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructMember" ):
                listener.exitStructMember(self)




    def structMember(self):

        localctx = simpleCGrammarParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structMember)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 73
                self.mType()
                pass

            elif la_ == 2:
                self.state = 74
                self.mArray()
                pass


            self.state = 77
            self.match(simpleCGrammarParser.Identifier)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 78
                self.match(simpleCGrammarParser.Comma)
                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 79
                    self.mType()
                    pass

                elif la_ == 2:
                    self.state = 80
                    self.mArray()
                    pass


                self.state = 83
                self.match(simpleCGrammarParser.Identifier)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(simpleCGrammarParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MStructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(simpleCGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_mStruct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMStruct" ):
                listener.enterMStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMStruct" ):
                listener.exitMStruct(self)




    def mStruct(self):

        localctx = simpleCGrammarParser.MStructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mStruct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(simpleCGrammarParser.T__3)
            self.state = 93
            self.match(simpleCGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCGrammarParser.MTypeContext,0)


        def Identifier(self):
            return self.getToken(simpleCGrammarParser.Identifier, 0)

        def LBracket(self):
            return self.getToken(simpleCGrammarParser.LBracket, 0)

        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Integer)
            else:
                return self.getToken(simpleCGrammarParser.Integer, i)

        def RBracket(self):
            return self.getToken(simpleCGrammarParser.RBracket, 0)

        def Semi(self):
            return self.getToken(simpleCGrammarParser.Semi, 0)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Comma)
            else:
                return self.getToken(simpleCGrammarParser.Comma, i)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_arrayDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDef" ):
                listener.enterArrayDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDef" ):
                listener.exitArrayDef(self)




    def arrayDef(self):

        localctx = simpleCGrammarParser.ArrayDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.mType()
            self.state = 96
            self.match(simpleCGrammarParser.Identifier)
            self.state = 97
            self.match(simpleCGrammarParser.LBracket)
            self.state = 98
            self.match(simpleCGrammarParser.Integer)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 99
                self.match(simpleCGrammarParser.Comma)
                self.state = 100
                self.match(simpleCGrammarParser.Integer)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(simpleCGrammarParser.RBracket)
            self.state = 107
            self.match(simpleCGrammarParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCGrammarParser.MTypeContext,0)


        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Identifier)
            else:
                return self.getToken(simpleCGrammarParser.Identifier, i)

        def Semi(self):
            return self.getToken(simpleCGrammarParser.Semi, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.ExprContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Comma)
            else:
                return self.getToken(simpleCGrammarParser.Comma, i)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_varDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDef" ):
                listener.enterVarDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDef" ):
                listener.exitVarDef(self)




    def varDef(self):

        localctx = simpleCGrammarParser.VarDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.mType()
            self.state = 110
            self.match(simpleCGrammarParser.Identifier)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 111
                self.match(simpleCGrammarParser.T__4)
                self.state = 112
                self.expr(0)


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 115
                self.match(simpleCGrammarParser.Comma)
                self.state = 116
                self.match(simpleCGrammarParser.Identifier)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 117
                    self.match(simpleCGrammarParser.T__4)
                    self.state = 118
                    self.expr(0)


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(simpleCGrammarParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(simpleCGrammarParser.Identifier, 0)

        def LParen(self):
            return self.getToken(simpleCGrammarParser.LParen, 0)

        def RParen(self):
            return self.getToken(simpleCGrammarParser.RParen, 0)

        def LBrace(self):
            return self.getToken(simpleCGrammarParser.LBrace, 0)

        def funcBody(self):
            return self.getTypedRuleContext(simpleCGrammarParser.FuncBodyContext,0)


        def RBrace(self):
            return self.getToken(simpleCGrammarParser.RBrace, 0)

        def mType(self):
            return self.getTypedRuleContext(simpleCGrammarParser.MTypeContext,0)


        def mStruct(self):
            return self.getTypedRuleContext(simpleCGrammarParser.MStructContext,0)


        def params(self):
            return self.getTypedRuleContext(simpleCGrammarParser.ParamsContext,0)


        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)




    def funcDef(self):

        localctx = simpleCGrammarParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 16, 17, 18]:
                self.state = 128
                self.mType()
                pass
            elif token in [6]:
                self.state = 129
                self.match(simpleCGrammarParser.T__5)
                pass
            elif token in [4]:
                self.state = 130
                self.mStruct()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 133
            self.match(simpleCGrammarParser.Identifier)
            self.state = 134
            self.match(simpleCGrammarParser.LParen)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0):
                self.state = 135
                self.params()


            self.state = 138
            self.match(simpleCGrammarParser.RParen)
            self.state = 139
            self.match(simpleCGrammarParser.LBrace)
            self.state = 140
            self.funcBody()
            self.state = 141
            self.match(simpleCGrammarParser.RBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.ParamContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.ParamContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(simpleCGrammarParser.Comma)
            else:
                return self.getToken(simpleCGrammarParser.Comma, i)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = simpleCGrammarParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.param()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 144
                self.match(simpleCGrammarParser.Comma)
                self.state = 145
                self.param()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(simpleCGrammarParser.MTypeContext,0)


        def Identifier(self):
            return self.getToken(simpleCGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = simpleCGrammarParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.mType()
            self.state = 152
            self.match(simpleCGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.StatementContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simpleCGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(simpleCGrammarParser.ExprContext,i)


        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)




    def funcBody(self):

        localctx = simpleCGrammarParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5393383040) != 0):
                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 155
                    self.expr(0)
                    pass


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStatement(self):
            return self.getTypedRuleContext(simpleCGrammarParser.ExprStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(simpleCGrammarParser.CompoundStatementContext,0)


        def selectionStatement(self):
            return self.getTypedRuleContext(simpleCGrammarParser.SelectionStatementContext,0)


        def iterationStatement(self):
            return self.getTypedRuleContext(simpleCGrammarParser.IterationStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(simpleCGrammarParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = simpleCGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 19, 20, 21, 22, 24, 30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.exprStatement()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.compoundStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.selectionStatement()
                pass
            elif token in [9, 10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.iterationStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(simpleCGrammarParser.ExprContext,0)


        def Semi(self):
            return self.getToken(simpleCGrammarParser.Semi, 0)

        def getRuleIndex(self):
            return simpleCGrammarParser.RULE_exprStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStatement" ):
                listener.enterExprStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStatement" ):
                listener.exitExprStatement(self)




    def exprStatement(self):

        localctx = simpleCGrammarParser.ExprStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.expr(0)
            self.state = 169
            self.match(simpleCGrammarParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBrace(self):
            return self.getToken(simpleCGrammarParser.LBrace, 0)
